Add cookie recipe link in index.html Add image, description, ingredients, and steps to chocolate_chip_cookies.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/chocolate_chip_cookies.html">Chocolate Chip Cookies</a>
+
     </body>
 
 </html>
