--- a/recipes/chocolate_chip_cookies.html
+++ b/recipes/chocolate_chip_cookies.html
@@ -1,1 +1,49 @@
-<h1>Chocolate Chip Cookies</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Chocolate Chip Cookies</h1>
+    <img src="../images.jpg/chocolate_chip_cookies_image.jpeg" width = 330>
+    <h4>Sweet and Salty Chocolate Chip Cookie Recipe that will Make your Mouth Water!</h4>
+    <p>This is the <strong>best chocolate chip cookies recipe</strong> ever! No funny ingredients, no chilling time, etc. 
+        Just a <em>simple, straightforward, amazingly delicious, doughy yet still fully cooked</em>, chocolate 
+        chip cookie that turns out perfectly every single time! </p>
+
+    <p>Everyone needs a classic chocolate chip cookie recipe in their repertoire, and this is mine. 
+        It is seriously the Best Chocolate Chip Cookie Recipe Ever! I have been making these for many, 
+        many years and everyone who tries them agrees they’re <strong>out-of-this-world delicious!</strong></p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>1 cup salted butter, softened</li>
+        <li>1 cup white (granulated) sugar</li>
+        <li>1 cup light brown sugar, packed</li>
+        <li>2 tsp pure vanilla extract</li>
+        <li>2 large eggs</li>
+        <li>3 cups all-purpose flour</li>
+        <li>1 tsp baking soda</li>
+        <li>1/2 tsp baking powder</li>
+        <li>1 tsp sea salt</li>
+        <li>2 cups chocolate chips</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 375 degrees F. Line a baking pan with parchment paper and set aside</li>
+        <li>In a separate bowl, mix flour, baking soda, salt, baking powder. Set aside.</li>
+        <li>Cream together butter and sugars until combined.</li>
+        <li>Beat in eggs and vanilla until fluffy</li>
+        <li>Mix in the dry ingredients until combined</li>
+        <li>Add 12 oz package of chocolate chips and mix well.</li>
+        <li>Roll 2-3 TBS of dough into balls and place them evenly on the baking sheet.</li>
+        <li>Bake in preheated oven for approximately 8-10 minutes. Take them out when they just <b>barely</b> start to turn brown.</li>
+    </ol>
+
+</body>
+</html>
