Grilled Cheese and Garlic Bread Recipe Pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/chocolate_chip_cookies.html">Chocolate Chip Cookies</a>
+        <uo>
+            <li><a href="./recipes/chocolate_chip_cookies.html">Chocolate Chip Cookies</a></li>
+            <li><a href="./recipes/garlic_bread.html">Garlic Bread</a></li>
+            <li><a href="./recipes/grilled_cheese.html">Grilled Cheese</a></li>
+        </uo>
 
     </body>
 
