--- a/recipes/chocolate_chip_cookies.html
+++ b/recipes/chocolate_chip_cookies.html
@@ -45,5 +45,8 @@
         <li>Bake in preheated oven for approximately 8-10 minutes. Take them out when they just <b>barely</b> start to turn brown.</li>
     </ol>
 
+    <p><a href="./chocolate_chip_cookies.html">Top of Page</a></p>
+    <p><a href="../index.html">Back to Main Page</a></p>
+
 </body>
 </html>
