Edit index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="website-title">Odin Recipes</h1>
 
-        <uo>
-            <li><a href="./recipes/chocolate_chip_cookies.html">Chocolate Chip Cookies</a></li>
-            <li><a href="./recipes/garlic_bread.html">Garlic Bread</a></li>
-            <li><a href="./recipes/grilled_cheese.html">Grilled Cheese</a></li>
-        </uo>
+        <p><a href="./recipes/chocolate_chip_cookies.html"><img src="images.jpg/chocolate_chip_cookies_image.jpeg" alt="Chocolate Chip Cookies" width="auto" height="120px"></a></p>
+        <p><a href="./recipes/garlic_bread.html"><img src="images.jpg/garlic_bread.jpeg" alt="Garlic Bread" width="auto" height="120px"></a></p>
+        <p><a href="./recipes/grilled_cheese.html"><img src="images.jpg/grilled_cheese.jpeg" alt="Grilled Cheese" width="auto" height="120px"></a></p>
 
     </body>
 
