Center Recipe Images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <body>
         <h1 class="website-title">Odin Recipes</h1>
-
-        <p><a href="./recipes/chocolate_chip_cookies.html"><img src="images.jpg/chocolate_chip_cookies_image.jpeg" alt="Chocolate Chip Cookies" width="auto" height="120px"></a></p>
-        <p><a href="./recipes/garlic_bread.html"><img src="images.jpg/garlic_bread.jpeg" alt="Garlic Bread" width="auto" height="120px"></a></p>
-        <p><a href="./recipes/grilled_cheese.html"><img src="images.jpg/grilled_cheese.jpeg" alt="Grilled Cheese" width="auto" height="120px"></a></p>
-
+        <p>
+            <a href="./recipes/chocolate_chip_cookies.html"><img src="images.jpg/chocolate_chip_cookies_image.jpeg" alt="Chocolate Chip Cookies" width="auto" height="120px"></a>
+            <a href="./recipes/garlic_bread.html"><img src="images.jpg/garlic_bread.jpeg" alt="Garlic Bread" width="auto" height="120px"></a>
+            <a href="./recipes/grilled_cheese.html"><img src="images.jpg/grilled_cheese.jpeg" alt="Grilled Cheese" width="auto" height="120px"></a>
+        </p>
     </body>
 
 </html>
